--- a/vue-auth-system/index.html
+++ b/vue-auth-system/index.html
@@ -2,10 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/profile1.avif" />
+    <!-- Preload main JS bundle -->
+    <link rel="modulepreload" href="/src/main.ts" />
+    <link
+      rel="preload"
+      href="/images/profile1.avif"
+      type="image/avif"
+    />
+    <link rel="preload" href="/fonts/inter.woff2" as="font" type="font/woff2" crossorigin>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio | Kay Zin Khaing</title>
   </head>
+<style>
+  @font-face {
+    font-family: 'Inter';
+    src: url('/fonts/inter.woff2') format('woff2');
+    font-display: swap;
+  }
+</style>
+
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
