doing for good performance

--- a/vue-auth-system/index.html
+++ b/vue-auth-system/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio | Kay Zin Khaing</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfolio | Kay Zin Khaing</title>
 
-  <link
-    rel="preload"
-    as="image"
-    href="/images/profile1.avif"
-    type="image/avif"
-    fetchpriority="high"
-  />
-</head>
+
+    <!-- Preload LCP hero image -->
+    <link
+      rel="preload"
+      as="image"
+      href="/images/profile1.avif"
+      type="image/avif"
+      fetchpriority="high"
+    />
+
+  </head>
 
   <body>
     <div id="app"></div>
